move the app into the app subdirectory

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,2 @@
-src/*
-!src/app/
-src/app/foo.go
-!src/builder/
-!src/setup/
-!src/github/
-!src/env/
-!src/heroku/
-!src/google/
-!src/killer/
-!src/runner/
-!src/worker/
-!src/bitbucket/
-bin/
-pkg/
-venv/
-go/
-code.google.com/
-.env
-*.py[oc]
+app/code.google.com
+*.py*
