working queue and push

--- a/app/cron.yaml
+++ b/app/cron.yaml
@@ -1,4 +1,4 @@
 cron:
-- description: minute cleanup
-  url: /tracker/clean
+- description: requeue things
+  url: /queue/requeue
   schedule: every 1 minutes
